# final-repo-back

./: .gitignore  0.31.0  4.42.0  BACKGROUND_CHANGE_GUIDE.md  BODY_ANALYSIS_CHANGES.md  BODY_ANALYSIS_MODELS.md  ENV_SETUP.md  FACE_SWAP_SETUP.md  IMAGE_ENHANCEMENT_MODELS.md  IMAGE_RETOUCHING_GUIDE.md  INSTRUCTPIX2PIX_GUIDE.md  INSWAPPER_DOWNLOAD.md  INSWAPPER_DOWNLOAD_ALTERNATIVE.md  JY.md  MODEL_DOWNLOAD_GUIDE.md  RAILWAY_DEPLOY.md  README.md  RECOMMENDED_MODELS.md  SERVER_COMMANDS.md  body_generation_service.py  body_line_definitions.md  category_rules.json  current_requirements.txt  main.py  marryday.prd  models_config.json  plan.md  pyproject.toml  requirements.txt  start-backend.bat  start_all_servers.bat  start_all_servers.ps1  test_background_remove_enhance.py  test_body_adjustment.py  test_image_enhancement.py  test_llm.py  test_new_body_adjustment.py
3d_conversion_test/: .gitignore  3d_conversion.py  MESHY_SETUP.md  README.md  download_model.py  requirements_test.txt  start_test_server_8003.bat
3d_models/: .gitkeep
body_analysis_test/: BODY_ANALYSIS_DETAILS.md  PROMPT_GUIDE.md  README.md  body_analysis.py  database.py  download_model.py  requirements_test.txt  start_test_server_8002.bat  test_body_analysis.py
config/: cors.py  prompts.py  settings.py
core/: gemini_client.py  llm_clients.py  meshy_client.py  model_loader.py  model_loader.py.backup  s3_client.py  segformer_garment_parser.py  xai_client.py
docs/: all_in_one.md  sequence_diagrams.md
image_enhancement_server/: ALTERNATIVE_MODELS.md  API_BASED_ENHANCEMENT_OPTIONS.md  CONTROLNET_FEATURES.md  (+5 more)
(+134 files in other folders)
